# Formacao_python_dio_projeto_final

./: .editorconfig  README.md  docker-compose.yml  main.py  pyproject.toml  tests.py
src/: constants.py  responses.py  secrets.py  services.py
