[tool.poetry]
name = "formacao-python-consumindo-api-twitter"
version = "1.0.0"
description = "teste"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.14.0"
pymongo = "^4.5.0"
unicorn = {extras = ["standard"], version = "^2.0.1.post1"}

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
